--- a/styleEx.css
+++ b/styleEx.css
@@ -30,6 +30,7 @@ header {
 
 #bloc_page {
     background-image: url("bg.jpg");
+    background-size: cover;
     border: 5px solid #000000;
     border-radius: 2%;
     margin: 15px;
@@ -64,7 +65,8 @@ nav {
     max-width: 100%;
     height: 200px;
     background-image: url("banniereVin.jpg");
-    background-size: contain;
+    background-position-y: 25%;
+    background-size: cover;
     border-radius: 3%;
     border: 3px solid rgba(255, 255, 255, 0.4);
     margin: 50px;
@@ -72,6 +74,7 @@ nav {
 
 #banniere_image:hover {
     background-image: url("saucisson.jpg");
+    background-position-y: 25%;
 }
 
 #banniere_image > img {
@@ -82,17 +85,15 @@ nav {
 
 section {
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start ;
+    flex-flow: row wrap;
+    justify-content: space-around;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 section article {
-    width: 66%;
+    min-width: 60vw;
+    flex: 1;
     height: 100%;
-    padding-left: 50px;
-    padding-right: 0;
-    padding-top: 25px;
-    margin: 0;
+    margin: 20px;
 }
 
 section article h2 {
@@ -106,11 +107,13 @@ section article h2 {
 section aside {
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
     background-color: rgba(97, 97, 97, 0.701);
     border-radius: 10%;
-    margin-right: 10px;
-    min-width: 25%;
+    min-width: 200px;
+    flex: 1;
+    padding: 20px 0 20px;
+    margin: 20px;
 }
 
 section aside h3 {
@@ -156,9 +159,6 @@ section article p {
     color: white;
 }
 
-section aside {
-    margin-left: 100px;
-}
 
 footer {
     display: flex;
@@ -189,7 +189,7 @@ footer * {
     margin-bottom: 5vh;
 }
 
-#tweet *:first-child {
+#tweet h3:first-child {
     background-color: rgba(255, 255, 255, 0.527);
     width: 100%;
     align-self: stretch;
@@ -219,7 +219,7 @@ footer * {
     border-radius: 3%;
 }
 
-#mes_photos *:first-child {
+#mes_photos h3:first-child {
     background-color: rgba(255, 255, 255, 0.527);
     width: 100%;
     align-self: stretch;
@@ -235,6 +235,14 @@ footer * {
 #mes_amis {
     background-color: rgba(255, 0, 0, 0.3);
     width: 30vw;
-    height: 50vh;
+    min-height: 50vh;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 3vh;
 }
 
+#mes_amis h3:first-child {
+    background-color: rgba(255, 255, 255, 0.527);
+    width: 100%;
+    align-self: stretch;
+    text-align: center;
+}
